<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <TextView
         android:id="@+id/tv_ticket_price"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:textSize="25sp"
         android:gravity="center"
         android:layout_marginTop="3dp"
         android:textColor="@color/black"
         android:padding="5dp"
         android:text="@string/ticket_price"/>
     <EditText
         android:id="@+id/et_ticket_price"
         android:layout_width="0dp"
         android:textStyle="bold"
         android:layout_marginEnd="10dp"
         android:inputType="numberDecimal"
         android:textColor="@color/black"
         android:layout_height="60dp"
         android:layout_weight="1"
         android:hint="@string/enter_ticket_price"
         android:autofillHints="" />
 </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:layout_marginStart="10dp"
       android:paddingStart="40dp"
       android:layout_marginEnd="10dp"
       android:orientation="horizontal">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="25sp"
           android:padding="5dp"
           android:textStyle="bold"
           android:textColor="@color/black"
           android:gravity="center"
           android:text="@string/discounted"/>


       <TextView
           android:id="@+id/tv_discounted_value"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="25sp"
           android:padding="5dp"
           android:textStyle="bold"
           android:textColor="@color/black"
           android:layout_marginStart="-5dp"
           android:gravity="center"
           />

   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/discounted_price"/>


        <TextView
            android:id="@+id/tv_discounted_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:padding="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="-5dp"
            android:gravity="center"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_discount_5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/discount_5"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_discount_10"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/discount_10"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_discount_15"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/discount_15"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_discount_20"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/discount_20"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_discount_50"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/discount_50"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

</LinearLayout>